; ModuleID = '/home/carl/AnghaBench/lede/target/linux/adm5120/files-3.18/drivers/net/extr_adm5120sw.c_adm5120_if_set_rx_mode.c'
source_filename = "/home/carl/AnghaBench/lede/target/linux/adm5120/files-3.18/drivers/net/extr_adm5120sw.c_adm5120_if_set_rx_mode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.adm5120_if_priv = type { i64 }

@adm5120_eth_vlans = common dso_local global i32* null, align 8
@SWITCH_PORTS_NOCPU = common dso_local global i32 0, align 4
@SWITCH_REG_CPUP_CONF = common dso_local global i32 0, align 4
@IFF_PROMISC = common dso_local global i32 0, align 4
@CPUP_CONF_DUNP_SHIFT = common dso_local global i32 0, align 4
@IFF_ALLMULTI = common dso_local global i32 0, align 4
@CPUP_CONF_DMCP_SHIFT = common dso_local global i32 0, align 4
@CPUP_CONF_BTM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.net_device*)* @adm5120_if_set_rx_mode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @adm5120_if_set_rx_mode(%struct.net_device* %0) #0 {
  %2 = alloca %struct.net_device*, align 8
  %3 = alloca %struct.adm5120_if_priv*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.net_device* %0, %struct.net_device** %2, align 8
  %6 = load %struct.net_device*, %struct.net_device** %2, align 8
  %7 = call %struct.adm5120_if_priv* @netdev_priv(%struct.net_device* %6)
  store %struct.adm5120_if_priv* %7, %struct.adm5120_if_priv** %3, align 8
  %8 = load i32*, i32** @adm5120_eth_vlans, align 8
  %9 = load %struct.adm5120_if_priv*, %struct.adm5120_if_priv** %3, align 8
  %10 = getelementptr inbounds %struct.adm5120_if_priv, %struct.adm5120_if_priv* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = getelementptr inbounds i32, i32* %8, i64 %11
  %13 = load i32, i32* %12, align 4
  %14 = load i32, i32* @SWITCH_PORTS_NOCPU, align 4
  %15 = and i32 %13, %14
  store i32 %15, i32* %4, align 4
  %16 = load i32, i32* @SWITCH_REG_CPUP_CONF, align 4
  %17 = call i32 @sw_read_reg(i32 %16)
  store i32 %17, i32* %5, align 4
  %18 = load %struct.net_device*, %struct.net_device** %2, align 8
  %19 = getelementptr inbounds %struct.net_device, %struct.net_device* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = load i32, i32* @IFF_PROMISC, align 4
  %22 = and i32 %20, %21
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %24, label %31

24:                                               ; preds = %1
  %25 = load i32, i32* %4, align 4
  %26 = load i32, i32* @CPUP_CONF_DUNP_SHIFT, align 4
  %27 = shl i32 %25, %26
  %28 = xor i32 %27, -1
  %29 = load i32, i32* %5, align 4
  %30 = and i32 %29, %28
  store i32 %30, i32* %5, align 4
  br label %37

31:                                               ; preds = %1
  %32 = load i32, i32* %4, align 4
  %33 = load i32, i32* @CPUP_CONF_DUNP_SHIFT, align 4
  %34 = shl i32 %32, %33
  %35 = load i32, i32* %5, align 4
  %36 = or i32 %35, %34
  store i32 %36, i32* %5, align 4
  br label %37

37:                                               ; preds = %31, %24
  %38 = load %struct.net_device*, %struct.net_device** %2, align 8
  %39 = getelementptr inbounds %struct.net_device, %struct.net_device* %38, i32 0, i32 0
  %40 = load i32, i32* %39, align 4
  %41 = load i32, i32* @IFF_PROMISC, align 4
  %42 = and i32 %40, %41
  %43 = icmp ne i32 %42, 0
  br i1 %43, label %55, label %44

44:                                               ; preds = %37
  %45 = load %struct.net_device*, %struct.net_device** %2, align 8
  %46 = getelementptr inbounds %struct.net_device, %struct.net_device* %45, i32 0, i32 0
  %47 = load i32, i32* %46, align 4
  %48 = load i32, i32* @IFF_ALLMULTI, align 4
  %49 = and i32 %47, %48
  %50 = icmp ne i32 %49, 0
  br i1 %50, label %55, label %51

51:                                               ; preds = %44
  %52 = load %struct.net_device*, %struct.net_device** %2, align 8
  %53 = call i64 @netdev_mc_count(%struct.net_device* %52)
  %54 = icmp ne i64 %53, 0
  br i1 %54, label %55, label %62

55:                                               ; preds = %51, %44, %37
  %56 = load i32, i32* %4, align 4
  %57 = load i32, i32* @CPUP_CONF_DMCP_SHIFT, align 4
  %58 = shl i32 %56, %57
  %59 = xor i32 %58, -1
  %60 = load i32, i32* %5, align 4
  %61 = and i32 %60, %59
  store i32 %61, i32* %5, align 4
  br label %68

62:                                               ; preds = %51
  %63 = load i32, i32* %4, align 4
  %64 = load i32, i32* @CPUP_CONF_DMCP_SHIFT, align 4
  %65 = shl i32 %63, %64
  %66 = load i32, i32* %5, align 4
  %67 = or i32 %66, %65
  store i32 %67, i32* %5, align 4
  br label %68

68:                                               ; preds = %62, %55
  %69 = load i32, i32* %5, align 4
  %70 = xor i32 %69, -1
  %71 = load i32, i32* @SWITCH_PORTS_NOCPU, align 4
  %72 = load i32, i32* @CPUP_CONF_DUNP_SHIFT, align 4
  %73 = shl i32 %71, %72
  %74 = and i32 %70, %73
  %75 = icmp ne i32 %74, 0
  br i1 %75, label %76, label %80

76:                                               ; preds = %68
  %77 = load i32, i32* @CPUP_CONF_BTM, align 4
  %78 = load i32, i32* %5, align 4
  %79 = or i32 %78, %77
  store i32 %79, i32* %5, align 4
  br label %85

80:                                               ; preds = %68
  %81 = load i32, i32* @CPUP_CONF_BTM, align 4
  %82 = xor i32 %81, -1
  %83 = load i32, i32* %5, align 4
  %84 = and i32 %83, %82
  store i32 %84, i32* %5, align 4
  br label %85

85:                                               ; preds = %80, %76
  %86 = load i32, i32* @SWITCH_REG_CPUP_CONF, align 4
  %87 = load i32, i32* %5, align 4
  %88 = call i32 @sw_write_reg(i32 %86, i32 %87)
  ret void
}

declare dso_local %struct.adm5120_if_priv* @netdev_priv(%struct.net_device*) #1

declare dso_local i32 @sw_read_reg(i32) #1

declare dso_local i64 @netdev_mc_count(%struct.net_device*) #1

declare dso_local i32 @sw_write_reg(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
